Ensured photos were centered and offset to cut off less heads

--- a/src/assets/css/home/slideshow.css
+++ b/src/assets/css/home/slideshow.css
@@ -19,6 +19,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center 35%;
   display: block;
 }
 
@@ -43,10 +44,11 @@ path.wave {
 .tagline {
   text-align: center;
   padding: 30px;
-  max-width: 40%;
+  max-width: 50%;
   margin: auto;
-  font-size: calc(32px * var(--font-size-modifier));
-  font-family: Times, serif;
+  font-size: calc(30px * var(--font-size-modifier));
+  font-family: var(--font-family-secondary);
+  color: var(--accent-text);
   text-decoration: bold;
   font-weight: bolder;
   margin-bottom: 30px;
